--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-daterange",
+  "name": "vue-as-daterangepicker",
   "version": "0.1.0",
   "author": "Andreas Stephan <info@cafe-serendipity.com> (info@cafe-serendipity.com)",
   "repository": {
